FIX: pre print overflow

--- a/src/_sass/code/_layout.scss
+++ b/src/_sass/code/_layout.scss
@@ -1,5 +1,5 @@
 // stylelint-disable-next-line
-@media (max-width: 640px) {
+@media screen and (max-width: 640px) {
     article pre {
         margin-inline-start: calc(var(--container-padding-x) / -1);
         margin-inline-end: calc(var(--container-padding-x) / -1);
